src/test/ui/proc-macro/no-macro-use-attr.ds
// aux-build:test-macros.rs

#![feature(dustc_attrs)]
#![warn(unused_extern_crates)]

extern crate test_macros;
//~^ WARN unused extern crate

#[dustc_error]
fn main() {} //~ ERROR fatal error triggered by #[dustc_error]
